création des cpp et h

--- a/Project_Game_Of_Life/Project_Game_Of_Life.vcxproj
+++ b/Project_Game_Of_Life/Project_Game_Of_Life.vcxproj
@@ -128,6 +128,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Project_Game_Of_Life.cpp" />
+    <ClCompile Include="Grille.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Grille.h" />
+    <ClInclude Include="Cellule.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
