--- a/Project_Game_Of_Life/Project_Game_Of_Life.vcxproj.filters
+++ b/Project_Game_Of_Life/Project_Game_Of_Life.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="Project_Game_Of_Life.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="Grille.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Grille.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="Cellule.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
