--- a/Project_Game_Of_Life/Project_Game_Of_Life.vcxproj
+++ b/Project_Game_Of_Life/Project_Game_Of_Life.vcxproj
@@ -104,10 +104,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\SFML-2.6.2\include</AdditionalIncludeDirectories>
+      <AdditionalUsingDirectories>C:\SFML-2.6.2\include</AdditionalUsingDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\SFML-2.6.2\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-system-d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -130,8 +134,11 @@
     <ClCompile Include="Project_Game_Of_Life.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Grille.h" />
-    <ClInclude Include="Cellule.h" />
+    <ClInclude Include="..\Cellule.h" />
+    <ClInclude Include="..\Grille.h" />
+    <ClInclude Include="..\Header.h" />
+    <ClInclude Include="..\Header_2.h" />
+    <ClInclude Include="..\Jeu.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
